--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.2",
     "datatables.net": "^2.0.8",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-viewerjs": "^0.1.9",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5"
   },
