--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-router-dom": "^6.23.1",
     "react-viewerjs": "^0.1.9",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^3.0.0-beta.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
